--- a/ProgrammerTool/ProgrammerTool.csproj
+++ b/ProgrammerTool/ProgrammerTool.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NSQLFormatter" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
